--- a/bitrise.yml
+++ b/bitrise.yml
@@ -4,19 +4,12 @@ default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 project_type: react-native
 trigger_map:
   - push_branch: "*"
-    workflow: primary
+    workflow: primary-android
   - pull_request_source_branch: "*"
-    workflow: primary
+    workflow: primary-android
 workflows:
   deploy:
     steps:
-      - avd-manager@0.9.1:
-          inputs:
-            - custom_command_flags: "-no-audio -debug-init"
-            - emulator_abi: armeabi-v7a
-            - emulator_id: pixel_xl_emulator
-            - profile: pixel_xl
-            - version: '25'
       - activate-ssh-key@4.0.3:
           run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
       - git-clone@4.0.13: {}
@@ -24,7 +17,6 @@ workflows:
           title: Do anything with Script step
       - npm@1.0.1:
           inputs:
-            - workdir: SampleApp
             - command: install
       - install-missing-android-tools@2.3.3:
           inputs:
@@ -40,18 +32,21 @@ workflows:
             - export_method: "$BITRISE_EXPORT_METHOD"
             - configuration: Release
       - deploy-to-bitrise-io@1.3.18: {}
-  primary:
+  primary-android:
     steps:
       - avd-manager@0.9.2:
           inputs:
-      - custom_command_flags: "-no-audio -debug-init"
-      - emulator_abi: armeabi-v7a
-      - emulator_id: pixel_xl_emulator
-      - profile: pixel_xl
-      - version: '25'
-      - activate-ssh-key@4.0.3: {}
+            - version: '25'
+            - density: ''
+            - resolution: ''
+            - emulator_id: pixel_xl_emulator
+            - emulator_abi: armeabi-v7a
+            - profile: pixel_xl
+      - activate-ssh-key@4.0.3:
+          run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
       - git-clone@4.0.13: {}
       - script@1.1.5:
+          title: Install dependencies. Build App. Test App.
           inputs:
             - content: |-
                 #!/usr/bin/env bash
@@ -63,30 +58,29 @@ workflows:
                 brew tap wix/brew
                 brew install AppleSimUtils
                 yarn install
-      - script@1.1.5:
-          inputs:
-            - content: |-
-                #!/usr/bin/env bash
-                # fail if any commands fails
-                set -e
-                # debug log
-                set -x
-
                 yarn build-android-release
-      - script@1.1.5:
-          inputs:
-            - content: |-
-                #!/usr/bin/env bash
-                # fail if any commands fails
-                set -e
-                # debug log
-                set -x
-
                 adb devices
                 yarn test-android
-      - deploy-to-bitrise-io@1.3.18:
-          is_always_run: false
-    before_run: []
+      - deploy-to-bitrise-io@1.3.18: {}
+  primary-ios:
+    steps:
+      - activate-ssh-key@4.0.3:
+          run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
+      - git-clone@4.0.13: {}
+      - script@1.1.5:
+          title: Install dependencies. Build App. Test App.
+          inputs:
+            - content: |-
+                #!/usr/bin/env bash
+                # fail if any commands fails
+                set -e
+                # debug log
+                set -x
+
+                yarn install
+                yarn build-ios-release
+                yarn test-ios
+      - deploy-to-bitrise-io@1.3.18: {}
 app:
   envs:
     - opts:
@@ -106,4 +100,4 @@ app:
       BITRISE_SCHEME: SampleApp
     - opts:
         is_expand: false
-      BITRISE_EXPORT_METHOD: development
+      BITRISE_EXPORT_METHOD: ad-hoc
