--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "build-android": "cd android && ./gradlew assembleDebug assembleAndroidTest -DtestBuildType=debug && cd ..",
     "build-android-release": "cd android && ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release && cd ..",
     "build-ios": "xcodebuild -project ios/SampleApp.xcodeproj -scheme SampleApp -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
+    "build-ios-release": "xcodebuild -project ios/SampleApp.xcodeproj -scheme SampleApp -configuration Release -sdk iphonesimulator -derivedDataPath ios/build",
     "start": "node node_modules/react-native/local-cli/cli.js start --reset-cache",
     "test": "jest",
     "test-android": "npx cucumber-js e2e/features -- platform=android",
-    "test-ios": "npx react-native start --reset-cache & npx cucumber-js e2e/features -- platform=ios"
+    "test-ios": "npx cucumber-js e2e/features -- platform=ios"
   },
   "dependencies": {
     "react": "16.6.1",
@@ -40,7 +41,7 @@
     "iosConfig": {
       "configurations": {
         "ios": {
-          "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/hyvee.grocery.app",
+          "binaryPath": "ios/build/Build/Products/Release-iphonesimulator/SampleApp.app",
           "type": "ios.simulator",
           "name": "iPhone X"
         }
