--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
       "configurations": {
         "android": {
           "binaryPath": "android/app/build/outputs/apk/release/app-release.apk",
-          "name": "pixel_xl_emulator",
+          "name": "NEXUS_5X_API_26",
           "type": "android.emulator"
         }
       }
