--- a/bitrise.yml
+++ b/bitrise.yml
@@ -34,17 +34,45 @@ workflows:
       - deploy-to-bitrise-io@1.3.18: {}
   primary-android:
     steps:
-      - avd-manager@0.9.2:
-          inputs:
-            - version: '25'
-            - density: ''
-            - resolution: ''
-            - emulator_id: pixel_xl_emulator
-            - emulator_abi: armeabi-v7a
-            - profile: pixel_xl
       - activate-ssh-key@4.0.3:
           run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
       - git-clone@4.0.13: {}
+      - script@1.1.5:
+          inputs:
+            - content: |-
+                #!/usr/bin/env bash
+                # fail if any commands fails
+                set -e
+                # debug log
+                #set -x
+
+                cd $ANDROID_HOME/emulator
+
+                echo no | avdmanager create avd -n Nexus_5X_API_26 -k "system-images;android-26;google_apis;x86" --force
+
+                emulator -avd Nexus_5X_API_26 -no-window -no-audio -debug-init > /dev/null 2>&1 &
+
+                echo "Waiting emulator is ready..."
+
+                adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 1; done; input keyevent 82'
+
+                echo "Emulator is ready!"
+          title: Start Android Emulator
+      - script@1.1.5:
+          title: Add Missing Properties
+          inputs:
+            - content: |-
+                #!/usr/bin/env bash
+                # fail if any commands fails
+                set -e
+                # debug log
+                set -x
+
+                echo "
+                hw.lcd.height=426
+                hw.lcd.width=240
+                hw.lcd.density=120
+                skin.name=240x426" >> /root/.android/avd/Nexus_5X_API_26.avd/config.ini
       - script@1.1.5:
           title: Install dependencies. Build App. Test App.
           inputs:
@@ -55,13 +83,17 @@ workflows:
                 # debug log
                 set -x
 
-                brew tap wix/brew
-                brew install AppleSimUtils
                 yarn install
+
+                echo "Building Android App"
                 yarn build-android-release
-                adb devices
+
+                echo "Testing Android App"
                 yarn test-android
       - deploy-to-bitrise-io@1.3.18: {}
+    meta:
+      bitrise.io:
+        stack: linux-docker-android-lts
   primary-ios:
     steps:
       - activate-ssh-key@4.0.3:
